Update dependencies Set default window size Refactor extraction logic